# VEDA_RTSP

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT.md  README.md  side.md  한화비전_SUNAPI_RTSP_ONVIF_정리.md
docs/: architecture.md  design-decisions.md  state-machine.md
src/: main.cpp
src/camera/: source.cpp  source.hpp
src/media/: annexb_reader.cpp  annexb_reader.hpp  file_source.cpp  file_source.hpp  hub.cpp  hub.hpp  nal_source.hpp
src/net/: tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
src/rtp/: h264_fua.cpp  h264_fua.hpp  packetizer.cpp  packetizer.hpp  streamer.cpp  streamer.hpp
src/rtsp/: parser.cpp  parser.hpp  response.cpp  response.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/sdp/: builder.cpp  builder.hpp
src/util/: base64.cpp  base64.hpp
tests/: CMakeLists.txt  test_parser.cpp  test_rtp.cpp  test_sdp.cpp  test_session.cpp
tools/: test_with_ffplay.sh
tools/simulator/: index.html
